--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -323,7 +323,7 @@
                                     @if (SignInManager.IsSignedIn(User))
                                     {
                                         <li>
-                                            <a href="/User/Deshboard/Index" title="Manage">
+                                            <a href="/User/Deshboard/MyDashboard" title="Manage">
                                                 <i class="zmdi zmdi-account"></i> Deshboard <i class="zmdi zmdi-caret-down"></i>
                                             </a>
 
