--- a/Areas/Customer/Views/Order/UserOrders.cshtml
+++ b/Areas/Customer/Views/Order/UserOrders.cshtml
@@ -110,16 +110,15 @@
                             @if (order.OrderCondition == OrderCondition.Delivered)
                             {
 
-                                <div class="btn-group mb-2 mt-2">
-                                    <form method="post" asp-action="DeleteUserOrder" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                                        <input type="hidden" name="id" value="@order.OrderNo" />
-                                        <button type="submit" class="btn btn-danger">Delete Order</button>
-                                    </form>
+                                // <div class="btn-group mb-2 mt-2">
+                                //     <form method="post" asp-action="DeleteUserOrder" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                //         <input type="hidden" name="id" value="@order.OrderNo" />
+                                //         <button type="submit" class="btn btn-danger">Delete Order</button>
+                                //     </form>
 
-                                </div>
+                                // </div>
 
                                 <button class="btn btn-secondary " style=" margin-left:5px" disabled>Return Order</button>
-                    // <a asp-controller="Review" style="width:180px;height:40px; margin-left:5px" asp-action="Create" asp-route-shopId="@order.ShopId" class="btn btn-success">Review Farmer Shop</a>
                                 <a class="btn btn-warning" style="width:180px;height:40px; margin-left:5px" href="@Url.Action("CreateReview", "FarmerShop", new { area = "Farmer", farmerShopId = order.ShopId })">Review  Shop</a>
                             }
                         }
