--- a/Areas/User/Views/Deshboard/MyDashboard.cshtml
+++ b/Areas/User/Views/Deshboard/MyDashboard.cshtml
@@ -122,7 +122,7 @@
             {
 
                 <div class="col-xl-3 col-md-6 mb-4">
-                    <a asp-area="Rider" asp-controller="RiderDelivary" asp-action="DeliveredOrders" asp-route-id="monthly" class="card-link">
+                    <a asp-area="Rider" asp-controller="RiderDelivery" asp-action="DeliveredOrders" asp-route-period="daily" class="card-link">
                         <div class="card border-left-primary shadow h-100 py-2 ">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
@@ -214,90 +214,189 @@
             }
 
 
-        </div>
-        <div>
-            @if (User.IsInRole("Rider"))
-            {
-                <div class="row mb-2 text-right justify-content-end" style="gap: 10px; margin-right:12px">
-                    <a asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index" class="nav-link btn  btn-primary">
-                        <i class="fa-solid fa-wrench"></i> Manage Delivary
-                    </a>
-                    <a asp-area="Rider" asp-controller="Rider" asp-action="RequestWithdraw" class="nav-link btn  btn-info">
-                        <i class="fa-solid fa-money-bill-transfer"></i>  Withdraw
-                    </a>
-                    <a asp-area="Rider" asp-controller="Rider" asp-action="EditRider" class="nav-link btn  btn-secondary">
-                        <i class="fa-solid fa-pen-to-square"></i> Edit Info
-                    </a>
-                </div>
 
 
 
-                @*     <div class="col-xl-12 col-lg-12">
-            <div class="card shadow mb-4">
-            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-            <h6 class="m-0 font-weight-bold text-primary">Order Overview</h6>
-            <div class="dropdown no-arrow">
-            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-            aria-labelledby="dropdownMenuLink">
-            <div class="dropdown-header">Order Map</div>
-            <a class="dropdown-item" href="#">By Revenue</a>
-            <a class="dropdown-item" href="#"> Delivary</a>
-
-            </div>
-            </div>
-            </div>
-            <div class="card-body">
-            <div class="chart-area">
-            <canvas id="myAreaChart"></canvas>
-            </div>
-            </div>
-            </div>
-            </div> *@
-
-
-
-                <div class="col-xl-12 col-lg-12">
-                    <div class="card shadow mb-4">
-                        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                            <h6 class="m-0 font-weight-bold text-primary">Rider Dashboard</h6>
-                        </div>
-                        <div class="card-body">
-                            <h5>Total Revenue: @ViewBag.TotalRevenue</h5>
-
-                            <h6>Monthly Deliveries</h6>
-                            <div class="chart-area">
-                                <canvas id="riderDeliveriesChart"></canvas>
-                            </div>
-
-                            <h6>Monthly Revenue</h6>
-                            <div class="chart-area">
-                                <canvas id="riderRevenueChart"></canvas>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-            }
-
-            @if (User.IsInRole("Customer"))
-            {
-
-
-            }
             @if (User.IsInRole("Farmer"))
             {
 
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <a asp-area="Farmer" asp-controller="Inventory" asp-action="AllOrdersGroupedByDate"  class="card-link">
+                        <div class="card border-left-primary shadow h-100 py-2 ">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                            This Month
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">৳ @* @ViewBag.CurrentMonthTotalRevenue *@</div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <a asp-action="Wallet" asp-controller="Inventory"  asp-area="Farmer" class="card-link">
+                        <div class="card border-left-success shadow h-100 py-2 ">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                            Wallet
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">৳ @* @ViewBag.TotalRevenue *@</div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fa-solid fa-bangladeshi-taka-sign fa-2x text-gray-300"></i>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <a asp-area="Farmer" asp-controller="Inventory" asp-action="Index" class="card-link">
+                        <div class="card border-left-info shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                            WareHouse
+                                        </div>
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col-auto">
+                                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">@* @ViewBag.CurrentMonthTotalDeliveries *@</div>
+                                            </div>
+                                            <div class="h5 mb-0 font-weight-bold " style="color: #20c997;"> Inventory </div>
+
+                                        </div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fa-solid fa-warehouse fa-2x " style="color: #20c997;"></i>
+                                     
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <a asp-area="Farmer" asp-controller="FarmerShop" asp-action="Index" class="card-link">
+                        <div class="card border-left-warning shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                                            Manage Shop
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">My Shop</div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fa-solid fa-shop fa-2x text-primary-300"></i>
+                                      
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
             }
-
-
-
-
         </div>
+        @if (User.IsInRole("Farmer"))
+        {
+            <div class="row mb-2 text-right justify-content-end" style="gap: 10px; margin-right:12px">
+                <a asp-area="Farmer" asp-controller="FarmerShop" asp-action="AddProduct" class="nav-link btn  btn-primary">
+                    <i class="fa-solid fa-plus"></i> Add Product
+                </a>
+                <a asp-area="Farmer" asp-controller="Inventory" asp-action="RequestWithdraw" class="nav-link btn  btn-info">
+                    <i class="fa-solid fa-money-bill-transfer"></i>  Withdraw
+                </a>
+                <a asp-area="Rider" asp-controller="Rider" asp-action="EditRider" class="nav-link btn  btn-secondary">
+                    <i class="fa-solid fa-pen-to-square"></i> Edit Info
+                </a>
+            </div>
+
+
+
+            <div class="col-xl-12 col-lg-12">
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                        <h6 class="m-0 font-weight-bold text-primary">Farmer Performance</h6>
+                    </div>
+                    <div class="card-body">
+                        <h5>Total Revenue: @ViewBag.TotalRevenue</h5>
+
+                        <h6>Monthly Deliveries</h6>
+                        <div class="chart-area">
+                            <canvas id="riderDeliveriesChart"></canvas>
+                        </div>
+
+                        <h6>Monthly Revenue</h6>
+                        <div class="chart-area">
+                            <canvas id="riderRevenueChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        }
+
+
+        @if (User.IsInRole("Rider"))
+        {
+            <div class="row mb-2 text-right justify-content-end" style="gap: 10px; margin-right:12px">
+                <a asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index" class="nav-link btn  btn-primary">
+                    <i class="fa-solid fa-wrench"></i> Manage Delivary
+                </a>
+                <a asp-area="Rider" asp-controller="Rider" asp-action="RequestWithdraw" class="nav-link btn  btn-info">
+                    <i class="fa-solid fa-money-bill-transfer"></i>  Withdraw
+                </a>
+                <a asp-area="Rider" asp-controller="Rider" asp-action="EditRider" class="nav-link btn  btn-secondary">
+                    <i class="fa-solid fa-pen-to-square"></i> Edit Info
+                </a>
+            </div>
+
+
+
+            <div class="col-xl-12 col-lg-12">
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                        <h6 class="m-0 font-weight-bold text-primary">Rider Dashboard</h6>
+                    </div>
+                    <div class="card-body">
+                        <h5>Total Revenue: @ViewBag.TotalRevenue</h5>
+
+                        <h6>Monthly Deliveries</h6>
+                        <div class="chart-area">
+                            <canvas id="riderDeliveriesChart"></canvas>
+                        </div>
+
+                        <h6>Monthly Revenue</h6>
+                        <div class="chart-area">
+                            <canvas id="riderRevenueChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        }
+
+
+
     </div>
 </div>
 
@@ -316,10 +415,10 @@
 
 @if (User.IsInRole("Rider"))
 {
-    
 
 
-@section Scripts {
+
+    @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         // Extract labels and data
@@ -393,5 +492,5 @@
             }
         });
     </script>
-}
+    }
 }
