--- a/Areas/User/Views/Deshboard/MyDashboard.cshtml
+++ b/Areas/User/Views/Deshboard/MyDashboard.cshtml
@@ -344,11 +344,11 @@
                     <div class="card-body">
                         <h5>Total Revenue: @ViewBag.TotalRevenue</h5>
 
-                        <div class="chart-container" style="position: relative; height:40vh; width:71vw">
+                        <div class="chart-container" style="position: relative;  height:40vh;">
                             <canvas id="revenueChart"></canvas>
                         </div>
 
-                        <div class="chart-container" style="position: relative; height:40vh; width:70vw">
+                        <div class="chart-container" style="position: relative; height:40vh; ">
                             <canvas id="performanceChart"></canvas>
                         </div>
                     </div>
